--- a/servers.yml
+++ b/servers.yml
@@ -1,3 +1,9 @@
+Description: >
+  This template deploys four EC2 instances in two different Availabilty Zones.
+  These instances run in an autoscaling group. The app to run is downloaded 
+  from an S3 bucket and run on an Apache server. To make these servers publically 
+  accessible a load balancer is added in front of them.
+
 Parameters:
   EnvironmentName:
     Description: An environment name that will be prefixed to resource names
@@ -5,6 +11,27 @@ Parameters:
   S3Bucket:
     Description: S3 bucket from where the archive will be downloaded
     Type: String
+  ArchivePath:
+    Description: Path to archive to be deployed on EC2 instances
+    Type: String
+    Default: archives/project-archive.zip
+
+  AMIId:
+    Description: AMI to use to create EC2 instances
+    Type: String
+    Default: ami-0e472ba40eb589f49  # ubuntu 18 in us-east-1
+  InstanceType:
+    Description: Instance type to use for EC2 instnaces
+    Type: String
+    Default: t3.medium
+  MinInstances:
+    Description: Minimum number of EC2 instances that AutoScaling group can scale down to
+    Type: Number
+    Default: 4
+  MaxInstances:
+    Description: Maximum number of EC2 instances that AutoScaling group can scale up to
+    Type: Number
+    Default: 4
 
 Resources:
   LoadBalancerSG:
@@ -14,15 +41,15 @@ Resources:
       VpcId:
         Fn::ImportValue: !Sub "${EnvironmentName}-VPCID"
       SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: 80
-        ToPort: 80
-        CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
       SecurityGroupEgress:
-      - IpProtocol: tcp
-        FromPort: 80
-        ToPort: 80
-        CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
   WebServerSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -30,15 +57,15 @@ Resources:
       VpcId:
         Fn::ImportValue: !Sub "${EnvironmentName}-VPCID"
       SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: 80
-        ToPort: 80
-        CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
       SecurityGroupEgress:
-      - IpProtocol: tcp
-        FromPort: 0
-        ToPort: 65535
-        CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 0
+          ToPort: 65535
+          CidrIp: 0.0.0.0/0
 
   S3ReadOnlyEC2Role:
     Type: AWS::IAM::Role
@@ -46,29 +73,29 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-        - Effect: Allow
-          Principal:
-            Service:
-            - ec2.amazonaws.com
-          Action:
-          - 'sts:AssumeRole'
-      Policies:
-      - PolicyName: S3ReadOnly
-        PolicyDocument:
-          Version: "2012-10-17"
-          Statement:
           - Effect: Allow
-            Action: 's3:GetObject'
-            Resource: '*'
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Policies:
+        - PolicyName: S3ReadOnly
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action: 's3:GetObject'
+                Resource: '*'
       RoleName: EC2-S3-read-only-access
       Tags:
-      - Key: Name
-        Value: !Ref EnvironmentName
+        - Key: Name
+          Value: !Ref EnvironmentName
   AppProfile:
     Type: AWS::IAM::InstanceProfile
     Properties: 
       Roles:
-      - !Ref S3ReadOnlyEC2Role
+        - !Ref S3ReadOnlyEC2Role
 
   WebAppLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
@@ -79,60 +106,60 @@ Resources:
           sudo apt-get update -y
           sudo apt-get install -y apache2 unzip awscli
           sudo systemctl start apache2.service    
-          aws s3 cp s3://${S3Bucket}/project-archive.zip .
+          aws s3 cp s3://${S3Bucket}/${ArchivePath} archive.zip
           sudo rm /var/www/html/index.html
-          sudo unzip project-archive.zip -d /var/www/html      
-      ImageId: ami-0e472ba40eb589f49  # ubuntu 18 in us-east-1
+          sudo unzip archive.zip -d /var/www/html
+      ImageId: !Ref AMIId
       IamInstanceProfile: !Ref AppProfile
       SecurityGroups:
-      - Ref: WebServerSG
-      InstanceType: t3.medium
+        - Ref: WebServerSG
+      InstanceType: !Ref InstanceType
       BlockDeviceMappings:
-      - DeviceName: "/dev/sdk"
-        Ebs:
-          VolumeSize: '10'
+        - DeviceName: "/dev/sdk"
+          Ebs:
+            VolumeSize: '10'
   WebAppGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
       VPCZoneIdentifier:
-      - Fn::ImportValue: 
-          !Sub "${EnvironmentName}-PRIV-NETS"
+        - Fn::ImportValue:
+            !Sub "${EnvironmentName}-PRIV-NETS"
       LaunchConfigurationName:
         Ref: WebAppLaunchConfig
-      MinSize: '4'
-      MaxSize: '4'
+      MinSize: !Ref MinInstances
+      MaxSize: !Ref MaxInstances
       TargetGroupARNs:
-      - Ref: WebAppTargetGroup
+        - Ref: WebAppTargetGroup
   WebAppLB:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       Subnets:
-      - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
-      - Fn::ImportValue: !Sub "${EnvironmentName}-PUB2-SN"
+        - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
+        - Fn::ImportValue: !Sub "${EnvironmentName}-PUB2-SN"
       SecurityGroups:
-      - Ref: LoadBalancerSG
+        - Ref: LoadBalancerSG
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       DefaultActions:
-      - Type: forward
-        TargetGroupArn:
-          Ref: WebAppTargetGroup
+        - Type: forward
+          TargetGroupArn:
+            Ref: WebAppTargetGroup
       LoadBalancerArn:
         Ref: WebAppLB
       Port: '80'
       Protocol: HTTP
   ALBListenerRule:
-      Type: AWS::ElasticLoadBalancingV2::ListenerRule
-      Properties:
-        Actions:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties:
+      Actions:
         - Type: forward
           TargetGroupArn: !Ref 'WebAppTargetGroup'
-        Conditions:
+      Conditions:
         - Field: path-pattern
           Values: [/]
-        ListenerArn: !Ref 'Listener'
-        Priority: 1
+      ListenerArn: !Ref 'Listener'
+      Priority: 1
   WebAppTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
@@ -149,8 +176,8 @@ Resources:
           Fn::Sub: "${EnvironmentName}-VPCID"
 
 Outputs: 
-    LBDNS: 
-        Description: Load balancer DNS name
-        Value: !Sub http://${WebAppLB.DNSName}
-        Export:
-          Name: !Sub ${EnvironmentName}-LB-DNS
+  LBDNS:
+    Description: Load balancer DNS name
+    Value: !Sub http://${WebAppLB.DNSName}
+    Export:
+      Name: !Sub ${EnvironmentName}-LB-DNS
